--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
@@ -30,7 +31,6 @@
     "babel-plugin-istanbul": "^7.0.1",
     "cross-env": "^10.1.0",
     "jest": "^30.2.0",
-    "node-cache": "^5.1.2",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
     "vitest": "^4.0.5"
